--- a/app.json
+++ b/app.json
@@ -3,7 +3,11 @@
     "name": "zhuzhu To-do Simple",
     "description": "zhuzhu to-do application (the simple version).",
     "slug": "zhuzhuTodoSimple",
-    "platforms": ["android", "ios", "web"],
+    "platforms": [
+      "android",
+      "ios",
+      "web"
+    ],
     "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/todo_icon.png",
@@ -38,6 +42,9 @@
     },
     "web": {
       "favicon": "./assets/todo_favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
