--- a/package.json
+++ b/package.json
@@ -32,37 +32,40 @@
     }
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.2",
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "color": "^3.1.2",
-    "expo": "~40.0.0",
-    "expo-localization": "~9.1.0",
+    "expo": "^50.0.13",
+    "expo-localization": "~14.8.3",
     "fund": "^1.0.0",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.0",
+    "@babel/core": "^7.20.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "~8.2.1",
+    "babel-preset-expo": "^10.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-native": "^3.10.0",
-    "jest": "^26.6.3",
-    "jest-expo": "^40.0.1",
-    "react-test-renderer": "^17.0.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.4",
+    "react-test-renderer": "^18.2.0",
     "yarpm": "^0.2.1"
   },
   "eslintConfig": {
