update versions and add eas config

--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "backgroundColor": "#ffffff"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/576b56e8-ad79-4750-b39c-b5f81df980c3"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -45,6 +46,13 @@
     },
     "plugins": [
       "expo-localization"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "576b56e8-ad79-4750-b39c-b5f81df980c3"
+      }
+    },
+    "owner": "sampig",
+    "runtimeVersion": "1.0.0"
   }
 }
