--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "name": "zhuzhu-todo-simple",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint components/*.js hooks/*.js",
@@ -43,6 +45,7 @@
     "color": "^3.1.2",
     "expo": "^50.0.13",
     "expo-localization": "~14.8.3",
+    "expo-updates": "~0.24.12",
     "fund": "^1.0.0",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
