--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zhuzhu-todo-simple",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -34,27 +34,27 @@
     }
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "color": "^3.1.2",
-    "expo": "^50.0.13",
-    "expo-localization": "~14.8.3",
-    "expo-updates": "~0.24.12",
+    "expo": "^51.0.38",
+    "expo-localization": "~15.0.3",
+    "expo-updates": "~0.25.27",
     "fund": "^1.0.0",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.5",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -62,12 +62,12 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "^10.0.0",
+    "babel-preset-expo": "~11.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-native": "^3.10.0",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "^18.2.0",
     "yarpm": "^0.2.1"
   },
