--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "color": "^3.1.2",
-    "expo": "^51.0.38",
+    "expo": "~51.0.39",
     "expo-localization": "~15.0.3",
-    "expo-updates": "~0.25.27",
+    "expo-updates": "~0.25.28",
     "fund": "^1.0.0",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
