--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,6 @@
 {
   "cli": {
+    "appVersionSource": "remote",
     "version": ">= 0.34.0"
   },
   "build": {
@@ -18,15 +19,11 @@
       "channel": "preview"
     },
     "production": {
+      "autoIncrement": true,
       "channel": "production"
     }
   },
   "submit": {
-    "production": {
-      "android": {
-        "serviceAccountKeyPath": "/Users/zhuc/Documents/personal_info/pc-api-8743302700774778637-862-c5475392d2b4.json",
-        "track": "internal"
-      }
-    }
+    "production": {}
   }
 }
